examples/failing/TypeSynonyms.purs
module Main where

type T1 = [T2]

type T2 = T1
